# moshi-korean-finetune

./: .gitignore  DGABV21000246-0.json  README.md  pyproject.toml  train.py
data_preparation/: ARCHITECTURE.md  README.md  __init__.py  config.py  example_config.yaml  requirements.txt
data_preparation_stage2/: README.md  __init__.py  config.py
docs/: AUDIO_PROMPT_OPTIONS_GUIDE.md  BBPE_TO_SENTENCEPIECE_ANALYSIS.md  DATA_PREPARATION_STAGE2_IMPLEMENTATION.md  ENHANCED_EVAL_METRICS_SPEC.md  FULL_DUPLEX_ARCHITECTURE_ANALYSIS.md  FULL_DUPLEX_MECHANISM_VERIFICATION.md  FULL_DUPLEX_STREAM_ANALYSIS.md  FUTURE_WORK_TEXT_POSTPROCESSING.md  K-MOSHI_ARCHITECTURE_PROPOSAL.md  K-MOSHI_DATA_SYNTHESIS_ANALYSIS.md  K-MOSHI_DIALOGUE_GENERATION_DETAILED.md  K-MOSHI_HYPERPARAMETER_GUIDE.md  K-MOSHI_SPEAKER_CONDITIONING_THEORY.md  K-MOSHI_SYNTHETIC_DIALOGUE_GUIDE.md  K-Moshi_Architecture.md  KOREAN_TOKENIZER_GUIDE.md  MOSHI_DUAL_TRANSFORMER_DEEP_ANALYSIS.md  SPEAKER_CONDITIONING_ARCHITECTURE_DIAGRAM.md  SPEAKER_CONDITIONING_COMPREHENSIVE_ANALYSIS.md  SPEAKER_CONDITIONING_IMPLEMENTATION_LOG.md  SPEAKER_CONDITIONING_IMPLEMENTATION_V2.md  SPEAKER_CONDITIONING_INFERENCE_ARCHITECTURE.md  SPEAKER_CONDITIONING_RESEARCH_DIRECTION.md  SPEAKER_CONDITIONING_SYSTEM_ARCHITECTURE.md  SPEAKER_CONDITIONING_THEORETICAL_ANALYSIS.md  STAGE_PRETRAINED_LOADING_DESIGN.md  TRAINING_GUIDE.md  TRAINING_PARADIGM_TAXONOMY.md  TRAINING_RECIPE_ANALYSIS.md  TRAINING_RECIPE_ANALYSIS_KO.md  W2V_BERT2_DOWNLOAD_GUIDE.md  ZERO_SHOT_SPEAKER_ARCHITECTURE_ANALYSIS.md  ZERO_SHOT_SPEAKER_CONDITIONING_SPECIFICATION.md  ZERO_SHOT_SPEAKER_DEEP_TECHNICAL_ANALYSIS.md
example/: korean_backbone_hf_lm.yaml  korean_backbone_moshi.yaml  korean_ddp.yaml  korean_eval_speaker_cond.yaml  korean_fsdp.yaml  korean_monologue_fsdp.yaml  korean_monologue_unified.yaml  korean_moshi_stage1_pretrain.yaml  korean_moshi_stage1_pretrain_spk.yaml  korean_moshi_stage2_speaker.yaml  korean_phase1_fsdp.yaml  korean_unified.yaml  korean_v1_fsdp.yaml  korean_v2_fsdp.yaml  korean_v3_fsdp.yaml  korean_v4_fsdp.yaml  korean_v4_fsdp_moshi.yaml  korean_v4_fsdp_moshi_v1.yaml  korean_v4_fsdp_origin.yaml
finetune/: __init__.py  args.py  checkpointing.py  distributed.py  eval.py  loss.py  pretrained_loader.py  scheduler.py  utils.py  wrapped_model.py
finetune/backbone/: base.py  (+7 more)
scripts/: convert_to_rust.py  create_unified_manifest.py  download_models.py  fix_config.py  fix_data_paths.py  prepare_training_data.py  run_korean_moshi_stage1_pretrain_spk.sh  run_training_v1.sh  run_training_v2.sh  run_training_v3.sh  run_training_v4.sh  run_training_v4_moshi.sh  serve_full_finetuned.sh  setup_environment.sh  test_data_loading.py  train_mpi.sh
serving/: .gitignore  README.md
tests/: __init__.py  test_speaker_conditioning.py  test_speaker_conditioning_eval.py
tools/: __init__.py  convert_hf_lm_to_sentencepiece.py  hf_lm_tokenizer_wrapper.py  init_korean_moshi.py  korean_tokenizer_wrapper.py  model_utils.py  tokenizer_utils.py
(+81 files in other folders)
